--- a/My first page/09!!.html
+++ b/My first page/09!!.html
@@ -2,7 +2,7 @@
 <html>
 <!-- Here starts the HTML file -->
 <head>
-	<link rel="stylesheet" type="text/css" href="css/01.css">
+	<link rel="stylesheet" type="text/css" href="01.css">
 	<title>THIS IS WEBSITE OF HTML5</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
 				This DTD contains all<span class="redColor"> HTML</span> elements and attributes, but does NOT INCLUDE presentational or deprecated elements <span class="redColor">(like font)</span>.Framesets are not allowed XML.The markup must also be written as well-formed XML.
 			</p>
 			<div>
-				<img src="images/0.jpg" width= 250px  left  alt="picture of a frog" />
+				<img src="0.jpg" width= 250px  left  alt="picture of a frog" />
 			</div>
 
 		</div>
